hn_tests/opt/failing/hasChar.hn
hasChar c s = {
	loopCond s = {
		neq a b = _not (eq a b)
		not (_or (_not (neq c (deref s))) (_not (neq (deref s) 0)))
	}
	eq (deref (whileF loopCond next s)) c
}